fixed horizontal scroll on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -166,11 +166,6 @@ a:hover {
     min-width: 100%;
     padding: 50px;
 }
-#howItWorks {
-    background: #f2f2f2;
-    min-width: 100%;
-    padding: 200px 0px 0px 200px;
-}
 
 .steps {
     padding: 25px;
